<resources>
    <string name="app_name">Mr. Black</string>
    <string name="log_in_mr_black">Mr. Black</string>

    <!--string name="gcm_sender_id">467036982489</string-->
    <string name="gcm_sender_id">255781750230</string>

    <string name="pref_api_key">api_key</string>
    <string name="pref_token">token</string>

    <string name="button_log_in">Log in</string>

    <string name="log_in_phone_text">Phone number</string>
    <string name="button_next">Next</string>

    <string name="log_in_code_text">Code</string>
    <string name="log_in_code_hint_text">Confirmation code</string>
    <string name="button_confirm">Confirm</string>

    <string name="empty_image_desc">Empty Image</string>
    <string name="selectVenue">Select venue</string>
    <string name="selectEvent">Select event</string>
    <string name="notifications">Notifications</string>
    <string name="noEvents">No events</string>
    <string name="noReservations">No reservations</string>
    <string name="noNotifications">No notifications</string>

    <string name="main_menu_my_reservations">My Reservations</string>
    <string name="main_menu_my_notifications">Notifications</string>
    <string name="main_menu_my_change_venue">Change venue</string>
    <string name="main_menu_my_log_out">Log out</string>

    <string name="release_reservation">Release Reservation</string>
    <string name="cancel_release_reservation">Cancel Release</string>
    <string name="enter_live_spend">Enter live spend</string>
    <string name="view_live_spend">View live spend</string>
    <string name="view_min_signatures">View Min Signatures</string>
    <string name="table_release">A you sure this table is released?</string>

    <string name="live_spend_enter_title">Live spend</string>
    <string name="live_spend_enter_hint">Enter live spend</string>
    <string name="live_spend_enter_button">Confirm</string>

    <string name="live_spend_view_title">Live spend</string>
    <string name="live_spend_view_empty">No live spend</string>

    <string name="parade_title">Parade!</string>
    <string name="parade_text">All servers go back to inventory room and be ready to execute a parade</string>
    <string name="parade_got_it">Got it</string>

    <string name="selectWifi">Select wifi point</string>
    <string name="noWifi">No wifi points</string>
    <string name="wifiPassword">Password</string>
    <string name="wifiPasswordHint">Password</string>
    <string name="wifiPasswordApply">Apply</string>

    <string name="backButton">Back</string>
</resources>
