<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:weightSum="1">

    <ImageView
        android:layout_width="@dimen/parade_icon_dimen"
        android:layout_height="@dimen/parade_icon_dimen"
        android:src="@drawable/icon_parade"
        android:contentDescription="@string/empty_image_desc"
        android:layout_margin="@dimen/main_padding"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="@dimen/big_padding">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="@dimen/text_size_h1"
            android:textStyle="bold"
            android:textColor="@color/whiteText"
            android:text="@string/parade_title"
            android:gravity="center"
            android:layout_marginBottom="@dimen/main_padding"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="@dimen/text_size_h3"
            android:textColor="@color/whiteText"
            android:text="@string/parade_text"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/gotItButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_height"
        android:background="@color/mainButton"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_h1"
        android:textStyle="bold"
        android:text="@string/parade_got_it"/>
</LinearLayout>