<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/resRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"/>
            <TextView
                android:id="@+id/noRes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/text_size_h1"
                android:text="@string/noReservations"
                android:gravity="center"
                android:visibility="visible"/>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainMenuBack"
            android:layout_gravity="end"
            android:layout_marginStart="-65dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/menuReservation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_menu_element_height"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="#888">
                    <ImageView
                        android:layout_width="@dimen/main_menu_element_image_dimen"
                        android:layout_height="@dimen/main_menu_element_image_dimen"
                        android:src="@drawable/main_menu_icon_reservation"
                        android:contentDescription="@string/empty_image_desc"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whiteText"
                        android:textSize="@dimen/text_size_h1"
                        android:text="@string/main_menu_my_reservations"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/menuNotification"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_menu_element_height"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="#888">
                    <ImageView
                        android:layout_width="@dimen/main_menu_element_image_dimen"
                        android:layout_height="@dimen/main_menu_element_image_dimen"
                        android:src="@drawable/main_menu_icon_notification"
                        android:contentDescription="@string/empty_image_desc"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whiteText"
                        android:textSize="@dimen/text_size_h1"
                        android:text="@string/main_menu_my_notifications"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/menuChangeVenue"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_menu_element_height"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="#888">
                    <ImageView
                        android:layout_width="@dimen/main_menu_element_image_dimen"
                        android:layout_height="@dimen/main_menu_element_image_dimen"
                        android:src="@drawable/main_menu_icon_change_venue"
                        android:contentDescription="@string/empty_image_desc"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whiteText"
                        android:textSize="@dimen/text_size_h1"
                        android:text="@string/main_menu_my_change_venue"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/menuLogOut"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_menu_element_height"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="#888">
                    <ImageView
                        android:layout_width="@dimen/main_menu_element_image_dimen"
                        android:layout_height="@dimen/main_menu_element_image_dimen"
                        android:src="@drawable/main_menu_icon_log_out"
                        android:contentDescription="@string/empty_image_desc"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whiteText"
                        android:textSize="@dimen/text_size_h1"
                        android:text="@string/main_menu_my_log_out"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>